--- a/src/problems/1dphase/.deps/newphasefield_wb-phasefield_pol.Po
+++ b/src/problems/1dphase/.deps/newphasefield_wb-phasefield_pol.Po
@@ -707,6 +707,11 @@ newphasefield_wb-phasefield_pol.o:  \
   /windows/Work/Dune/dune-fem/dune/fem/solver/oemsolver/bicgsq.h \
   /windows/Work/Dune/dune-fem/dune/fem/operator/matrix/spmatrix.cc \
   ../../../dune/fem/util/wb_energyconverter.hh \
+  ../../../dune/fem/adaptation/estimator1.hh \
+  /windows/Work/Dune/dune-fem/dune/fem/misc/h1norm.hh \
+  /windows/Work/Dune/dune-fem/dune/fem/misc/l2norm.hh \
+  /windows/Work/Dune/dune-fem/dune/fem/quadrature/integrator.hh \
+  /windows/Work/Dune/dune-fem/dune/fem/misc/lpnorm.hh \
   ../../../dune/fem/util/cons2prim.hh \
   /windows/Work/Dune/dune-grid/dune/grid/io/visual/grapedatadisplay.hh \
   /windows/Work/Dune/dune-grid/dune/grid/io/visual/grapegriddisplay.hh \
@@ -2233,6 +2238,16 @@ wellbalancedphysics.hh:
 /windows/Work/Dune/dune-fem/dune/fem/operator/matrix/spmatrix.cc:
 
 ../../../dune/fem/util/wb_energyconverter.hh:
+
+../../../dune/fem/adaptation/estimator1.hh:
+
+/windows/Work/Dune/dune-fem/dune/fem/misc/h1norm.hh:
+
+/windows/Work/Dune/dune-fem/dune/fem/misc/l2norm.hh:
+
+/windows/Work/Dune/dune-fem/dune/fem/quadrature/integrator.hh:
+
+/windows/Work/Dune/dune-fem/dune/fem/misc/lpnorm.hh:
 
 ../../../dune/fem/util/cons2prim.hh:
 
